# DroidDeck

./: CHANGELOG.md  CODE_REVIEW.md  LICENSE  README.md  VALIDATION.md  droiddeck-gtk  install.sh  pyproject.toml  uninstall.sh
.droiddeck/: README.md  release.json
.github/workflows/: attach-release-assets.yml  bootstrap-release.yml  ci.yml  implement-v0.4.0.yml
data/: io.github.droiddeck.DroidDeck.desktop.in  io.github.droiddeck.DroidDeck.metainfo.xml
src/droiddeck_gtk/: __init__.py  app.py  backend.py  launcher.py  pages_adb.py  pages_flash.py  pages_settings.py  sideload_patch.py  widgets.py
tests/: conftest.py  test_backend.py  test_imports.py  test_static_safety.py
